# installer

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  installerApp.cpp  installerApp.h  installerApp.rc  installerAppDlg.cpp  installerAppDlg.h  resource.h
.github/workflows/: build_cmake.yml
backend/: installer.cpp  installer.h  registry.h  streams.h  use_http.h
